Fix Bug 346370 - KMail does not accept to insert an URL (Copied from Chromium) into a message

BUG: 346370

FIXED-IN: 15.08.1

It's mainly a workaround against a Qt bug https://bugreports.qt.io/browse/QTBUG-47981